	(DONE) Adding keybindings for renaming/deleting/refreshing
	(DONE) Add option to change bars position // requested by <dmaphy>
	(DONE) Add option to autorename point the newest created objects by the Treebrowser


+-------------------------------+
| Development release ChangeLog |
+-------------------------------+


09-10-2010 	Adrian Dimitrov 		<dimitrov.adrian@gmail.com>

	* src/treebrowser.c
		Fixes possible segfaults with bookmarks in ubuntu 10.10
	* README
		Update and fixes website compitables

09-10-2010 	Adrian Dimitrov 		<dimitrov.adrian@gmail.com>

	* src/treebrowser.c
		Fixed translatable info
			(thanks to Frank Lanitz  <frank(at)frank(dot)uvena(dot)de> for patch)
		Fixed fixed bad code and compilation warning in unused vars
			(thanks to Frank Lanitz  <frank(at)frank(dot)uvena(dot)de> for patch)
		Fixed some compilation warnings
		Try to prevent from "ISO C90 forbids mixed declarations and code" compile message


08-10-2010 	Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>

	*  src/treebrowser.c
		Replace deprecated PLUGIN_KEY_GROUP macro.


08-10-2010 	Adrian Dimitrov 		<dimitrov.adrian@gmail.com>

	* src/treebrowser.c
		Added keybindings for renaming/deleting/refreshing
			(from the todo list)
		Added: now when option for show hidden files is disabled, it don`t show
			files that ends with '~'
		Fixed possible segfault when option "Hidding object files" is enabled
			(idea from native filebrowser plugin)


05-10-2010 	Adrian Dimitrov 		<dimitrov.adrian@gmail.com>

	* src/treebrowser.c
		Fixed wrong english message for not existing directory
			(thanks to Dimitar Zhekov (dimitar.zhekov@gmail.com))
		Added option to autorename point the newest created objects by the Treebrowser
			Improved autorename focus while renamed is successful then close old and
			  open new file;
		Improved dialog for nonexisting folder
			(now apear only when toolbars is hidden)
		Fixed some warnings when compiling